# cmake-test-explorer

./: .gitmodules  .prettierrc  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
examples/: examples.code-workspace
examples/advanced_usage/: .gitignore  CMakeLists.txt  README.md
examples/advanced_usage/include/: simple_lib.h
examples/advanced_usage/src/: CMakeLists.txt  simple_lib.c
examples/advanced_usage/tests/: CMakeLists.txt  test_add.c  test_helpers.h  test_multiply.c
examples/simple_project/: CMakeLists.txt  README.md
examples/simple_project/include/: simple_lib.h
examples/simple_project/src/: simple_lib.c
examples/simple_project/tests/: CMakeLists.txt  test_simple_lib.c
src/: cmake-adapter.ts  cmake-controller.ts  cmake-runner.ts  main.ts
src/interfaces/: cmake-test-info.ts  cmake-test-process.ts  cmake-test-result.ts
